--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,19 @@ services:
       - twitter-network
     restart: always
 
+
+  redis-timeline:
+    container_name: redis
+    image: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - twitter-network
+    volumes:
+      - my-redis-timeline:/data/redis
+    restart: always
+
+
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
@@ -49,6 +62,7 @@ volumes:
   my-db-tweet:
   my-db-user:
   pgadmin:
+  my-redis-timeline:
 
 networks:
   twitter-network:
