--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
   <modules>
     <module>user-service</module>
     <module>tweet-service</module>
+    <module>timeline-service</module>
     <module>gateway</module>
   </modules>
   <dependencies>
