--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,40 @@ services:
       - my-redis-timeline:/data/redis
     restart: always
 
+  zoo1:
+    container_name: zoo1
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - twitter-network
+    ports:
+      - 22181:2181
+    volumes:
+      - kafka-storage:/data
+      - kafka-storage:/datalog
+
+  kafka1:
+    container_name: kafka1
+    image: confluentinc/cp-kafka
+    hostname: kafka1
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
+      KAFKA_BROKER_ID: 1
+      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    volumes:
+      - ./zk-single-kafka-single/kafka1/data:/var/lib/kafka/data
+    depends_on:
+      - zoo1
+    networks:
+      - twitter-network
 
   pgadmin:
     container_name: pgadmin
@@ -63,6 +97,7 @@ volumes:
   my-db-user:
   pgadmin:
   my-redis-timeline:
+  kafka-storage:
 
 networks:
   twitter-network:
