--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -28,7 +28,9 @@ spring:
           github:
             client-id:  ${GITHUB_CLIENT_ID:581a14a284dd1d5815f5}
             client-secret:  ${GITHUB_CLIENT_SECRET:8c77af28a85cd5bc2063e007cb48116296767152}
-
+            scope:
+              - user:email
+              - read:user
 jwt:
   secret: screte-value
   expiration: 86400000
