--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 9002
 spring:
   application:
     name: user-service
@@ -51,6 +51,5 @@ app:
     # we'll be generating an auth token for the user and sending the token to the
     # redirectUri mentioned by the client in the /oauth2/authorize request.
     # We're not using cookies because they won't work well in mobile clients.
-    authorizedRedirectUris:
-      - http://localhost:5173/oauth2/redirect
+    authorizedRedirectUris: "http://localhost:5173/oauth2/redirect"
 #  http://localhost:9002/oauth2/authorize/github?redirect_uri=http://localhost:5173/oauth2/redirect
