--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -93,7 +93,11 @@
 			<artifactId>spring-cloud-starter-kubernetes</artifactId>
 			<version>1.1.10.RELEASE</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
