--- a/tweet-service/pom.xml
+++ b/tweet-service/pom.xml
@@ -84,8 +84,12 @@
             <version>3.1.1</version>
             <scope>compile</scope>
         </dependency>
-
-    </dependencies>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
