--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   jpa:
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -25,13 +25,27 @@ spring:
     oauth2:
       client:
         registration:
-          github:
-            client-id:  ${GITHUB_CLIENT_ID:581a14a284dd1d5815f5}
-            client-secret:  ${GITHUB_CLIENT_SECRET:8c77af28a85cd5bc2063e007cb48116296767152}
-            redirect-uri:  "{baseUrl}/oauth2/callback/{registrationId}"
-            scope:
-              - user:email
-              - read:user
+            google:
+              clientId: 952781349439-js8fh2delvi33ncscisku9vhan0re72o.apps.googleusercontent.com
+              clientSecret: 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
+              redirectUri: "{baseUrl}/oauth2/callback/{registrationId}"
+              scope:
+                - email
+                - profile
+#          facebook:
+#            clientId: 121189305185277
+#            clientSecret: 42ffe5aa7379e8326387e0fe16f34132
+#            redirectUri: "{baseUrl}/oauth2/callback/{registrationId}"
+#            scope:
+#              - email
+#              - public_profile
+#          github:
+#            client-id:  ${GITHUB_CLIENT_ID:581a14a284dd1d5815f5}
+#            client-secret:  ${GITHUB_CLIENT_SECRET:8c77af28a85cd5bc2063e007cb48116296767152}
+#            redirect-uri:  "{baseUrl}/oauth2/callback/{registrationId}"
+#            scope:
+#              - user:emails
+#              - read:user
 jwt:
   header: Authorization
   secret: dejavu
