--- a/tweet-service/src/main/resources/application.yml
+++ b/tweet-service/src/main/resources/application.yml
@@ -35,15 +35,17 @@ spring:
               - read:user
   kafka:
     consumer:
-      bootstrap-servers: host.minikube.internal:9092
+      bootstrap-servers: localhost:9092
+#      bootstrap-servers: host.minikube.internal:9092
       group-id: group_id
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
     producer:
-      bootstrap-servers: host.minikube.internal:9092
+      bootstrap-servers: localhost:9092
+#      bootstrap-servers: host.minikube.internal:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 jwt:
   header: Authorization
