--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
 
   zoo1:
     container_name: zoo1
-    image: confluentinc/cp-zookeeper:latest
+    image: wurstmeister/zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -57,7 +57,7 @@ services:
 
   kafka1:
     container_name: kafka1
-    image: confluentinc/cp-kafka
+    image: wurstmeister/kafka
     ports:
       - "9092:9092"
     environment:
