--- a/tweet-service/src/main/resources/application.yml
+++ b/tweet-service/src/main/resources/application.yml
@@ -33,6 +33,11 @@ spring:
             scope:
               - user:email
               - read:user
+  redis:
+    host: ${REDIS_URL:redis://default:bKHo0mmnI1atx5ULubqR@containers-us-west-161.railway.app:6394}
+#    host: ${REDIS_URL:localhost}
+    port: ${REDIS_PORT:6379}
+
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
@@ -41,6 +46,11 @@ spring:
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: '*'
     producer:
       bootstrap-servers: localhost:9092
 #      bootstrap-servers: host.minikube.internal:9092
