--- a/tweet-service/src/main/resources/application.yml
+++ b/tweet-service/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   jpa:
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -34,14 +34,14 @@ spring:
               - user:email
               - read:user
   redis:
-    host: ${REDIS_URL:redis://default:bKHo0mmnI1atx5ULubqR@containers-us-west-161.railway.app:6394}
+    host: 34.118.240.76
 #    host: ${REDIS_URL:localhost}
-    port: ${REDIS_PORT:6379}
+    port: 6380
 
   kafka:
     consumer:
-      bootstrap-servers: localhost:9092
-#      bootstrap-servers: host.minikube.internal:9092
+      bootstrap-servers: 34.118.240.76:9093
+      #      bootstrap-servers: host.minikube.internal:9092
       group-id: group_id
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -52,8 +52,8 @@ spring:
             trusted:
               packages: '*'
     producer:
-      bootstrap-servers: localhost:9092
-#      bootstrap-servers: host.minikube.internal:9092
+      bootstrap-servers: 34.118.240.76:9093
+      #      bootstrap-servers: host.minikube.internal:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
