--- a/tweet-service/src/main/resources/application.yml
+++ b/tweet-service/src/main/resources/application.yml
@@ -34,14 +34,13 @@ spring:
               - user:email
               - read:user
   redis:
-    host: ${REDIS_URL:redis://default:bKHo0mmnI1atx5ULubqR@containers-us-west-161.railway.app:6394}
+    host: 34.118.240.76:6380
 #    host: ${REDIS_URL:localhost}
     port: ${REDIS_PORT:6379}
 
   kafka:
     consumer:
-      bootstrap-servers: localhost:9092
-#      bootstrap-servers: host.minikube.internal:9092
+      bootstrap-servers: 34.118.240.76:9093
       group-id: group_id
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -52,8 +51,7 @@ spring:
             trusted:
               packages: '*'
     producer:
-      bootstrap-servers: localhost:9092
-#      bootstrap-servers: host.minikube.internal:9092
+      bootstrap-servers: 34.118.240.76:9093
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
